k8s/nodejs-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
        - name: nodejs
          image: githubconnector.azurecr.io/${PROJECT_NAME}-backend:${IMAGE_TAG}
          resources:
            requests:
              memory: "48Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: acr-image-pull
